--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<h1 style="color:red;"> TEST</h1>
-<p style="text-family: Arial;">NE NAW</p>
+<h1 style="color:red;"> Chatty cinnamons Website</h1>
+<p style="text-family: Arial;">I am the sweet boi of da univers</p>
 </body>
 </html>
